# Symantic-book-Recommender-LangChain

./: .gitignore  EDA.ipynb  README.md  app.py  pyproject.toml  requirements.txt  sentiment_analysis.ipynb  text_classification.ipynb  vector_search.ipynb
app/: gradio-dashboard.py
notebooks/: EDA.ipynb  sentiment_analysis.ipynb  text_classification.ipynb  vector_search.ipynb
